[build-system]
requires = ["uv_build>=0.11.4,<0.12"]
build-backend = "uv_build"

[project]
name = "pipeline-visualizer"
version = "0.2.0"
authors = [
    { name = "Marcos De Assis", email = "mg.21191077@gmail.com" }
]
description = "A simple CLI tool to visualize shell pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "typer>=0.25.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.15.1",
    "ipykernel>=7.3.0",
    "poethepoet>=0.45.0",
    "prek>=0.4.4",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.ruff]
target-version = "py312"
show-fixes = true

[tool.ruff.lint]
pydocstyle.convention = "google"
select = [
    "D", # Docstrings rules
    "F", # Prevent real runtime bugs (Pyflakes)
    "W", # pycodestyle warnings (PEP8)
    "E", # pycodestyle errors (PEP8)
    "I", # Automatically organize imports (Isort)
    "UP", # Update syntax to newer Python versions
    "PL", # Code smells and design issues based on Pylint rules
    "T201", # Forbid use of print (prefer logging)
    "B", # Detect code patterns prone to errors (flake8-bugbear)
    "SIM", # Detect code that can be simplified (flake8-simplify)
    "ARG", # Detect unused parameters (flake8-unused-arguments)
    "C901", # Detect complex functions (flake8-complexity)
    "C4", # Help write better list comprehensions (flake8-comprehensions)
    "RET", # Detect inconsistent returns (flake8-return)
    "PIE", # Detect code potentially vulnerable to speculative execution attacks (flake8-pie)
    "S", # Detect common security issues (bandit)
    "DTZ", # Detect timezone-related issues (flake8-datetimez)
    "N", # Detect naming issues (pep8-naming)
]

ignore = [
    "D107", # Ignore required docstring in __init__
    "D104", # Ignore docstring in public method
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.format]
docstring-code-format = true

[tool.pydoclint]
style = 'google'
check-style-mismatch = true
treat-property-methods-as-class-attributes = true
skip-checking-short-docstrings = false
exclude = '\.git|\.venv|.pytest_cache|.ruff_cache|data|notebooks'

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
